Complete mobile optimization: responsive design, touch-friendly interactions, placeholder images for all barber projects

--- a/projects/barber-1/index.html
+++ b/projects/barber-1/index.html
@@ -25,28 +25,28 @@
             <div class="merch-grid">
                 <div class="merch-card">
                     <div class="merch-image">
-                        <img src="images/merch-1.jpg" alt="Classic T-Shirt">
+                        <img src="https://images.pexels.com/photos/8534088/pexels-photo-8534088.jpeg?w=400&h=400&fit=crop" alt="Classic T-Shirt">
                     </div>
                     <h3 class="merch-name">Classic T-Shirt</h3>
                     <p class="merch-price">$29.99</p>
                 </div>
                 <div class="merch-card">
                     <div class="merch-image">
-                        <img src="images/merch-2.jpg" alt="Premium Hoodie">
+                        <img src="https://images.pexels.com/photos/6069704/pexels-photo-6069704.jpeg?w=400&h=400&fit=crop" alt="Premium Hoodie">
                     </div>
                     <h3 class="merch-name">Premium Hoodie</h3>
                     <p class="merch-price">$49.99</p>
                 </div>
                 <div class="merch-card">
                     <div class="merch-image">
-                        <img src="images/merch-3.jpg" alt="Vintage Cap">
+                        <img src="https://images.pexels.com/photos/2887718/pexels-photo-2887718.jpeg?w=400&h=400&fit=crop" alt="Vintage Cap">
                     </div>
                     <h3 class="merch-name">Vintage Cap</h3>
                     <p class="merch-price">$24.99</p>
                 </div>
                 <div class="merch-card">
                     <div class="merch-image">
-                        <img src="images/merch-4.jpg" alt="Logo Tote Bag">
+                        <img src="https://images.pexels.com/photos/5625120/pexels-photo-5625120.jpeg?w=400&h=400&fit=crop" alt="Logo Tote Bag">
                     </div>
                     <h3 class="merch-name">Logo Tote Bag</h3>
                     <p class="merch-price">$19.99</p>
@@ -92,7 +92,7 @@
                     </p>
                 </div>
                 <div class="story-image">
-                    <img src="images/story.jpg" alt="Our Barbershop">
+                    <img src="https://images.pexels.com/photos/5585750/pexels-photo-5585750.jpeg?w=600&h=800&fit=crop" alt="Our Barbershop Interior">
                 </div>
             </div>
         </div>
@@ -139,7 +139,7 @@
                     <a href="#contact" class="btn btn-primary">BOOK NOW</a>
                 </div>
                 <div class="services-image">
-                    <img src="images/barber-chair.jpg" alt="Vintage Barber Chair">
+                    <img src="https://images.pexels.com/photos/3998365/pexels-photo-3998365.jpeg?w=600&h=800&fit=crop" alt="Vintage Barber Chair">
                 </div>
             </div>
         </div>
@@ -151,28 +151,28 @@
             <h2 class="section-title">GALLERY</h2>
             <div class="gallery-grid">
                 <div class="gallery-item">
-                    <img src="images/gallery-1.jpg" alt="Gallery Image 1">
+                    <img src="https://images.pexels.com/photos/3998399/pexels-photo-3998399.jpeg?w=400&h=300&fit=crop" alt="Professional Haircut">
                 </div>
                 <div class="gallery-item">
-                    <img src="images/gallery-2.jpg" alt="Gallery Image 2">
+                    <img src="https://images.pexels.com/photos/3998387/pexels-photo-3998387.jpeg?w=400&h=300&fit=crop" alt="Beard Trimming">
                 </div>
                 <div class="gallery-item">
-                    <img src="images/gallery-3.jpg" alt="Gallery Image 3">
+                    <img src="https://images.pexels.com/photos/3992656/pexels-photo-3992656.jpeg?w=400&h=300&fit=crop" alt="Barber Tools">
                 </div>
                 <div class="gallery-item">
-                    <img src="images/gallery-4.jpg" alt="Gallery Image 4">
+                    <img src="https://images.pexels.com/photos/3993446/pexels-photo-3993446.jpeg?w=400&h=300&fit=crop" alt="Modern Barber Shop">
                 </div>
                 <div class="gallery-item">
-                    <img src="images/gallery-5.jpg" alt="Gallery Image 5">
+                    <img src="https://images.pexels.com/photos/3998300/pexels-photo-3998300.jpeg?w=400&h=300&fit=crop" alt="Hair Styling">
                 </div>
                 <div class="gallery-item">
-                    <img src="images/gallery-6.jpg" alt="Gallery Image 6">
+                    <img src="https://images.pexels.com/photos/5585766/pexels-photo-5585766.jpeg?w=400&h=300&fit=crop" alt="Barber Shop Interior">
                 </div>
                 <div class="gallery-item">
-                    <img src="images/gallery-7.jpg" alt="Gallery Image 7">
+                    <img src="https://images.pexels.com/photos/4614200/pexels-photo-4614200.jpeg?w=400&h=300&fit=crop" alt="Classic Shave">
                 </div>
                 <div class="gallery-item">
-                    <img src="images/gallery-8.jpg" alt="Gallery Image 8">
+                    <img src="https://images.pexels.com/photos/3998317/pexels-photo-3998317.jpeg?w=400&h=300&fit=crop" alt="Barber Working">
                 </div>
             </div>
         </div>
