--- a/projects/barber-2/index.html
+++ b/projects/barber-2/index.html
@@ -45,7 +45,7 @@
         <div class="container">
             <div class="two-column">
                 <div class="column-image">
-                    <img src="https://images.unsplash.com/photo-1503951914875-452162b0f3f1?w=800&h=1000&fit=crop" alt="Professional cut">
+                    <img src="https://images.pexels.com/photos/3998322/pexels-photo-3998322.jpeg?w=800&h=1000&fit=crop" alt="Professional cut">
                 </div>
                 <div class="column-content">
                     <h2>BEYOND EXPECTATIONS</h2>
@@ -60,16 +60,16 @@
     <section id="gallery" class="gallery">
         <div class="gallery-grid">
             <div class="gallery-item">
-                <img src="https://images.unsplash.com/photo-1585747860715-2ba37e788b70?w=400&h=400&fit=crop" alt="Gallery 1">
+                <img src="https://images.pexels.com/photos/3998365/pexels-photo-3998365.jpeg?w=400&h=400&fit=crop" alt="Vintage Barbershop">
             </div>
             <div class="gallery-item">
-                <img src="https://images.unsplash.com/photo-1622296089863-eb7fc530daa8?w=400&h=400&fit=crop" alt="Gallery 2">
+                <img src="https://images.pexels.com/photos/3998387/pexels-photo-3998387.jpeg?w=400&h=400&fit=crop" alt="Professional Beard Trim">
             </div>
             <div class="gallery-item">
-                <img src="https://images.unsplash.com/photo-1621605815971-fbc98d665033?w=400&h=400&fit=crop" alt="Gallery 3">
+                <img src="https://images.pexels.com/photos/3992656/pexels-photo-3992656.jpeg?w=400&h=400&fit=crop" alt="Classic Barber Tools">
             </div>
             <div class="gallery-item">
-                <img src="https://images.unsplash.com/photo-1598515214211-89d3c73ae83b?w=400&h=400&fit=crop" alt="Gallery 4">
+                <img src="https://images.pexels.com/photos/5585750/pexels-photo-5585750.jpeg?w=400&h=400&fit=crop" alt="Modern Barber Shop">
             </div>
         </div>
     </section>
